@@ -1,3 +1,8 @@
+2007-08-11  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/plot.common.R
+	* interfaces/R/igraph/R/plot.R (plot.igraph) : added 'asp' parameter
+
 2007-08-10  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structural.properties.R (is.loop, is.multiple)
